k8s_manifests/monitoring/ingress/traefik/ingress-alert-manager.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: monitoring
  annotations:
    certmanager.k8s.io/cluster-issuer: issuer-prod
    certmanager.k8s.io/acme-challenge-type: dns01
    certmanager.k8s.io/acme-dns01-provider: route53
    traefik.ingress.kubernetes.io/auth-type: "basic"
    traefik.ingress.kubernetes.io/auth-secret: "traefik-monitoring-basic-auth"
spec:
  rules:

    - host: raca-alert-manager.ballab.com
      http:
        paths:
          - path: /
            backend:
              serviceName: alertmanager-main
              servicePort: 9093
  tls:
    - hosts:
        - raca-alert-manager.ballab.com
      secretName: raca-monitoring-alert-manager-tls
