k8s_manifests/monitoring/ingress/traefik/ingress-grafana.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-grafana
  namespace: monitoring
  annotations:
    certmanager.k8s.io/cluster-issuer: issuer-prod
    certmanager.k8s.io/acme-challenge-type: dns01
    certmanager.k8s.io/acme-dns01-provider: route53
spec:
  rules:

    - host: raca-grafana.ballab.com
      http:
        paths:
          - path: /
            backend:
              serviceName: grafana
              servicePort: 3000

  tls:
    - hosts:
        - raca-grafana.ballab.com
      secretName: raca-monitoring-grafana-tls
